<resources>
    <string name="app_name">SPmunjz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome_to_munjz">Welcome To Munjz</string>
    <string name="login_screen_messaage">Loading Household &amp; Facility Service Providers</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="logout">Logout</string>
    <string name="active">Active</string>
    <string name="accepted">Accepted</string>
    <string name="history">History</string>
    <string name="requested_details">Requested details</string>
    <string name="sar">SAR</string>

    <string name="customer">Customer:</string>
    <string name="service_id">Service ID:</string>
    <string name="region">Region:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="status">Status:</string>
    <string name="status1">Status - &#160;</string>

    <string name="edit">Edit</string>
    <string name="accept">Accept</string>
    <string name="profile">Profile</string>
    <string name="email_address">Email Address:</string>
    <string name="services">Services:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>

    <string name="requested_location">Requested Location</string>
    <string name="location">Location:</string>
    <string name="view">View</string>


    <string name="service_request">SERVICE REQUEST</string>
    <string name="location_caps">LOCATION</string>


    <string name="cancel_alert">Are you sure you want to cancel?</string>

    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="email_error">Please enter valid email</string>
    <string name="password_error">Please enter valid password</string>
    <string name="something_went_wrong">Something went wrong please try again</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="no_data">No Data</string>

    <string name="in_progress">Inprogress</string>

    <string name="request">Request</string>
    <string name="inprogress">InProgress</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>


    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>

    <string name="additional_service">Additional Service</string>
    <string name="service_name">Service Name</string>
    <string name="price">Price</string>
    <string name="share">Share</string>

    <string name="user_details">User details</string>
    <string name="total_due">Total Due</string>
    <string name="send">Send</string>
    <string name="email_comma_separated">Email comma separated</string>
    <string name="comments">Comments</string>

    <string name="balance">Balance</string>
    <string name="advance_amount">Advance payment:</string>
    <string name="balance_amount">Balance:</string>
    <string name="complete_count">Number of requests:</string>

    <string name="additional_service_empty">Please enter valid service name and price</string>
    <string name="notes">Note: The minimum price to request a service is 50 SAR</string>

    <string name="description">Description:</string>
    <string name="images">Image(s):</string>
    <string name="additional_service_s">Additional service(s):</string>
    <string name="image_view">Image View</string>
    <string name="no_image">No image available</string>

    <string name="requested_summary">Requested Summary</string>
    <string name="summary">Summary</string>
    <string name="summary_view">View order details</string>

    <string-array name="status_array">
        <item>@string/request</item>
        <item>@string/inprogress</item>
        <item>@string/confirm</item>
        <item>@string/complete</item>
        <!--<item>@string/cancel</item> -->
    </string-array>

    <string-array name="status_array_key">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <!--<item>4</item>-->
    </string-array>

    <string-array name="language_array">
        <item>@string/english</item>
        <item>@string/arabic</item>
    </string-array>


    <!-- Don't translate this string -->
    <string name="en">en</string>
    <string name="ar">ar</string>

    <string-array name="language_key_array">
        <item>@string/en</item>
        <item>@string/ar</item>
    </string-array>
    <string name="title_activity_image_view">ImageViewActivity</string>


</resources>
