<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginVM"
            type="com.munjzservice.login.viewmodel.LoginVM" />
        <variable
            name="userInfo"
            type="com.munjzservice.login.model.UserInfo"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:onClick="@{loginVM::onClickRootView}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="@string/welcome_to_munjz"
                            android:textColor="@color/white"
                            android:textSize="@dimen/twenty_sp"
                            app:font="@{@string/san_francisco_text_medium}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/login_screen_messaage"
                            android:textColor="@color/white"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}"
                            />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/login_edittext_bg"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:text="@={userInfo.email}"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:padding="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/login_edittext_bg"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:text="@={userInfo.password}"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:padding="10dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/login_edittext_bg"
                            android:gravity="center"
                            android:text="@string/signin"
                            android:textSize="@dimen/seventeen_sp"
                            android:onClick="@{loginVM::onClickLogin}"
                            android:textColor="@color/font_color2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:textSize="@dimen/fifteen_sp"
                            android:onClick="@{loginVM::onClickForgotPassword}"
                            app:font="@{@string/san_francisco_text_medium}" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>