<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.munjzservice.utility.StringUtility"/>

        <variable
            name="balanceVM"
            type="com.munjzservice.balance.viewmodel.BalanceVM"/>
        <variable
            name="balance"
            type="com.munjzservice.balance.model.Balance"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/ic_left_arrow"
                        android:onClick="@{balanceVM::onClickBack}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/balance"
                        android:textColor="@color/white"
                        android:textSize="@dimen/twenty_sp"
                        android:textStyle="bold"
                        app:font="@{@string/san_francisco_text_medium}" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/video_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/balance_label_width"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="5dp"
                            android:text="@string/advance_amount"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="5dp"
                            android:text="@{balance.advance_amount}"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/balance_label_width"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/balance_amount"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@{balance.balance_amount}"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/balance_label_width"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/complete_count"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@{balance.complete_count}"
                            android:textColor="@color/font_color1"
                            android:textSize="@dimen/fifteen_sp"
                            app:font="@{@string/san_francisco_text_medium}" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>